--- a/style.css
+++ b/style.css
@@ -1,27 +1,23 @@
 input[type=submit] {
-    font-size: 5.5em;
+    font-size: 1em;
 }
-/* Set a background color to the 'body' element */
-body { 
-    background-color: blue;
-    }
-    
-/* Same as above, but using the CSS 'background' property instead */
-body { 
-    background: blue;
-    }
-    
-/* Setting the text color for the 'h1' element */    
-h1 { 
-    color: blue;
-    }
+body {
+    background-image: url("dna-helix-molecular-structure-blue-background-d-illustration-dna-double-helix-molecular-structure-background-111951870.jpg");
+    background-color: lightblue;
+    color: rgb(102, 0, 128);
+    margin-left: 20px;
+}
 
-/* Setting a border color on the 'article' element */
-article { 
-    border-color: blue;
-    }
+h1 {
+    color: rgb(102, 0, 128);
+    margin-left: 20px;
+}
 
-/* Same as previous, but using the 'border' property instead (also sets border width and style) */    
-article { 
-    border: 1px solid blue;
-    }
+h3 {
+    color: rgb(102, 0, 128);
+    margin-left: 20px;
+}
+
+p {
+    font-family: sans-serif;
+}
